# brave-core-fork

./: BUILD.gn  brave_paks.gni  package-lock.json  package.json
.storybook/: locale.ts
android/: brave_java_resources.gni  brave_java_sources.gni
android/java/org/chromium/base/: BraveCommandLineInitUtil.java
android/java/org/chromium/chrome/browser/: BraveBadge.java  BraveFeatureList.java  BraveRelaunchUtils.java  CrossPromotionalModalDialogFragment.java
android/java/org/chromium/chrome/browser/app/: BraveActivity.java
android/java/org/chromium/chrome/browser/appmenu/: BraveTabbedAppMenuPropertiesDelegate.java
android/java/org/chromium/chrome/browser/externalnav/: BraveExternalNavigationHandler.java
android/java/org/chromium/chrome/browser/notifications/: BraveOnboardingNotification.java
android/java/org/chromium/chrome/browser/notifications/retention/: RetentionNotificationPublisher.java  RetentionNotificationUtil.java
android/java/org/chromium/chrome/browser/ntp/: BraveNewTabPageLayout.java
android/java/org/chromium/chrome/browser/ntp/widget/: NTPWidgetAdapter.java  NTPWidgetManager.java  NTPWidgetStackActivity.java
android/java/org/chromium/chrome/browser/onboarding/: OnViewPagerAction.java  OnboardingActivity.java  OnboardingPrefManager.java
android/java/org/chromium/chrome/browser/preferences/: BravePrefServiceBridge.java
android/java/org/chromium/chrome/browser/privacy/settings/: BravePrivacySettings.java
android/java/org/chromium/chrome/browser/settings/: AppearancePreferences.java  BraveMainPreferencesBase.java  BravePreferenceFragment.java
android/java/org/chromium/chrome/browser/settings/developer/: BraveQAPreferences.java
android/java/org/chromium/chrome/browser/shields/: BraveShieldsHandler.java
android/java/org/chromium/chrome/browser/suggestions/tile/: BraveTileView.java
android/java/org/chromium/chrome/browser/toolbar/top/: BraveToolbarLayout.java
android/java/org/chromium/chrome/browser/upgrade/: BraveUpgradeJobIntentService.java
android/java/org/chromium/chrome/browser/util/: TabUtils.java
app/: brave_command_ids.h  brave_generated_resources.grd  brave_main_delegate.cc
browser/: BUILD.gn  brave_browser_main_extra_parts.cc  brave_browser_main_parts.cc  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_content_browser_client_browsertest.cc  brave_content_browser_client_unittest.cc  brave_local_state_prefs.cc  brave_profile_prefs.cc  brave_profile_prefs_browsertest.cc  brave_scheme_load_browsertest.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/android/: BUILD.gn
browser/android/preferences/: BUILD.gn  brave_pref_service_bridge.cc
browser/browsing_data/: brave_browsing_data_remover_delegate.cc
browser/extensions/: BUILD.gn  brave_component_loader.cc  brave_component_loader.h  brave_extension_provider.cc  brave_extension_service.cc
browser/extensions/api/: brave_extensions_api_client.cc  brave_extensions_api_client_unittest.cc  brave_shields_api.cc
browser/extensions/api/settings_private/: brave_prefs_util.cc
browser/greaselion/: greaselion_browsertest.cc
browser/importer/: BUILD.gn  brave_external_process_importer_host.cc
browser/infobars/: BUILD.gn
browser/metrics/test/: BUILD.gn
browser/net/: BUILD.gn  brave_request_handler.cc  brave_request_handler.h  url_context.h
browser/profiles/: BUILD.gn  brave_profile_manager.cc  brave_profile_manager_browsertest.cc  profile_util.cc  profile_util.h
browser/resources/settings/: BUILD.gn
browser/resources/settings/brave_appearance_page/: BUILD.gn  brave_theme.html  brave_theme.js
browser/resources/settings/brave_default_extensions_page/: brave_default_extensions_browser_proxy.js  brave_default_extensions_page.html  brave_default_extensions_page.js
browser/resources/settings/brave_overrides/: appearance_page.js  clear_browsing_data_dialog.js
browser/resources/settings/brave_privacy_page/: brave_personalization_options.html  brave_personalization_options.js  brave_privacy_page_browser_proxy.js
browser/resources/settings/default_brave_shields_page/: default_brave_shields_page.html
browser/signin/: sources.gni
browser/speedreader/: speedreader_browsertest.cc
browser/tor/: BUILD.gn  tor_profile_manager_browsertest.cc
browser/ui/: BUILD.gn  brave_browser_command_controller.cc  brave_browser_command_controller.h  brave_browser_command_controller_browsertest.cc  brave_pages.cc  brave_pages.h
browser/ui/android/strings/: android_brave_strings.grd
browser/ui/brave_actions/: brave_action_view_controller.cc
browser/ui/omnibox/: brave_omnibox_client_impl.cc
browser/ui/startup/: default_brave_browser_prompt.cc  default_brave_browser_prompt.h
browser/ui/toolbar/: brave_app_menu_model.cc  brave_app_menu_model.h  brave_app_menu_model_browsertest.cc  brave_location_bar_model_delegate.cc  brave_location_bar_model_delegate_unittest.cc  brave_toolbar_actions_model.cc
browser/ui/views/: brave_default_browser_dialog_view.cc  brave_default_browser_dialog_view.h
browser/ui/views/brave_actions/: brave_actions_container.cc  brave_actions_container.h  brave_actions_container_browsertest.cc
browser/ui/views/location_bar/: brave_location_bar_view.h
browser/ui/webui/: brave_settings_ui.cc  brave_web_ui_controller_factory.cc  brave_webui_source.cc  brave_welcome_ui.cc
browser/ui/webui/new_tab_page/: brave_new_tab_message_handler.cc  brave_new_tab_message_handler.h  instant_service_message_handler.cc
browser/ui/webui/settings/: brave_appearance_handler.cc  brave_default_extensions_handler.cc  brave_default_extensions_handler.h  brave_privacy_handler.cc  brave_privacy_handler.h
common/: brave_features.cc  brave_features.h  brave_switches.cc  brave_switches.h  network_constants.cc  network_constants.h  pref_names.cc  pref_names.h  url_constants.cc  url_constants.h  webui_url_constants.cc  webui_url_constants.h
patches/: chrome-VERSION.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-chrome_content_browser_client.h.patch  (+8 more)
(+107 files in other folders)
