import("//brave/build/config.gni")
import(
    "//brave/components/brave_perf_predictor/browser/buildflags/buildflags.gni")
import("//brave/components/brave_sync/buildflags/buildflags.gni")
import("//brave/components/brave_wayback_machine/buildflags/buildflags.gni")
import("//brave/components/brave_webtorrent/browser/buildflags/buildflags.gni")
import("//brave/components/greaselion/browser/buildflags/buildflags.gni")
import("//brave/components/ipfs/buildflags/buildflags.gni")
import("//brave/components/speedreader/buildflags.gni")
import("//brave/components/tor/buildflags/buildflags.gni")
import("//build/buildflag_header.gni")
import("//build/config/features.gni")
import("//chrome/common/features.gni")
import("//components/gcm_driver/config.gni")
import("//extensions/buildflags/buildflags.gni")
import("//third_party/protobuf/proto_library.gni")
import("//third_party/widevine/cdm/widevine.gni")

source_set("browser_process") {
  # Remove when https://github.com/brave/brave-browser/issues/10657 is resolved
  check_includes = false
  visibility = [
    "//brave:browser_dependencies",
    "//brave/browser/*",
    "//brave/components/ipfs/test:*",
    "//brave/test:*",
    "//chrome/browser/*",
  ]

  sources = [
    "autocomplete/brave_autocomplete_scheme_classifier.cc",
    "autocomplete/brave_autocomplete_scheme_classifier.h",
    "brave_browser_main_extra_parts.cc",
    "brave_browser_main_extra_parts.h",
    "brave_browser_main_parts.cc",
    "brave_browser_main_parts.h",
    "brave_browser_process_impl.cc",
    "brave_browser_process_impl.h",
    "brave_content_browser_client.cc",
    "brave_content_browser_client.h",
    "brave_local_state_prefs.cc",
    "brave_local_state_prefs.h",
    "brave_profile_prefs.cc",
    "brave_profile_prefs.h",
    "brave_shields/ad_block_pref_service_factory.cc",
    "brave_shields/ad_block_pref_service_factory.h",
    "brave_shields/cookie_pref_service_factory.cc",
    "brave_shields/cookie_pref_service_factory.h",
    "brave_tab_helpers.cc",
    "brave_tab_helpers.h",
    "browser_context_keyed_service_factories.cc",
    "browser_context_keyed_service_factories.h",
    "component_updater/brave_component_installer.cc",
    "component_updater/brave_component_installer.h",
    "component_updater/brave_component_updater_configurator.cc",
    "component_updater/brave_component_updater_configurator.h",
    "component_updater/brave_component_updater_delegate.cc",
    "component_updater/brave_component_updater_delegate.h",
    "geolocation/brave_geolocation_permission_context_delegate.cc",
    "geolocation/brave_geolocation_permission_context_delegate.h",
    "metrics/metrics_reporting_util.cc",
    "metrics/metrics_reporting_util.h",
    "search_engines/guest_window_search_engine_provider_service.cc",
    "search_engines/guest_window_search_engine_provider_service.h",
    "search_engines/private_window_search_engine_provider_service.cc",
    "search_engines/private_window_search_engine_provider_service.h",
    "search_engines/search_engine_provider_service.cc",
    "search_engines/search_engine_provider_service.h",
    "search_engines/search_engine_provider_service_factory.cc",
    "search_engines/search_engine_provider_service_factory.h",
    "search_engines/search_engine_provider_util.cc",
    "search_engines/search_engine_provider_util.h",
    "search_engines/tor_window_search_engine_provider_service.cc",
    "search_engines/tor_window_search_engine_provider_service.h",
    "update_util.cc",
    "update_util.h",
  ]

  if (is_mac) {
    sources += [
      "brave_browser_main_parts_mac.h",
      "brave_browser_main_parts_mac.mm",
    ]
  }

  if (enable_sparkle) {
    sources += [
      "mac/sparkle_glue.h",
      "mac/sparkle_glue.mm",
      "mac/su_updater.h",
    ]
  }

  deps = [
    ":sparkle_buildflags",
    ":version_info",
    "browsing_data",
    "content_settings",
    "download",
    "ephemeral_storage",
    "farbling",
    "net",
    "profiles",
    "renderer_context_menu",
    "search",
    "sync",
    "themes",
    "ui",
    "//base",
    "//brave/browser/net",
    "//brave/browser/translate/buildflags",
    "//brave/common",
    "//brave/common:pref_names",
    "//brave/components/brave_component_updater/browser",
    "//brave/components/brave_drm",
    "//brave/components/brave_shields/browser",
    "//brave/components/brave_shields/common",
    "//brave/components/brave_sync",
    "//brave/components/brave_wayback_machine:buildflags",
    "//brave/components/brave_webtorrent/browser/buildflags",
    "//brave/components/content_settings/core/browser",
    "//brave/components/cosmetic_filters/browser",
    "//brave/components/cosmetic_filters/common:mojom",
    "//brave/components/greaselion/browser/buildflags",
    "//brave/components/ipfs/buildflags",
    "//brave/components/l10n/browser",
    "//brave/components/ntp_tiles",
    "//brave/components/resources",
    "//brave/components/speedreader:buildflags",
    "//brave/components/tor/buildflags",
    "//brave/components/brave_user_model/browser",
    "//brave/components/weekly_storage",
    "//brave/components/brave_user_model/browser",
    "//brave/services/network/public/cpp",
    "//chrome/common",
    "//components/autofill/core/common",
    "//components/browsing_data/core",
    "//components/component_updater",
    "//components/content_settings/browser",
    "//components/content_settings/core/browser",
    "//components/content_settings/core/common",
    "//components/dom_distiller/core",
    "//components/embedder_support",
    "//components/gcm_driver:gcm_buildflags",
    "//components/gcm_driver:gcm_driver",
    "//components/keyed_service/content",
    "//components/metrics",
    "//components/password_manager/core/common",
    "//components/permissions",
    "//components/policy/core/browser",
    "//components/prefs",
    "//components/safe_browsing/core/common:safe_browsing_prefs",
    "//components/search_engines",
    "//components/services/patch/content",
    "//components/services/unzip/content",
    "//components/sessions",
    "//components/spellcheck/browser",
    "//components/sync_device_info",
    "//components/unified_consent",
    "//components/update_client:patch_impl",
    "//components/update_client:unzip_impl",
    "//content/public/browser",
    "//content/public/common",
    "//extensions/buildflags",
    "//mojo/public/cpp/bindings",
    "//services/metrics/public/cpp:metrics_cpp",
    "//services/network/public/cpp",
    "//third_party/blink/public/mojom:mojom_platform_headers",
    "//third_party/widevine/cdm:buildflags",
    "//ui/base",
  ]

  if (enable_greaselion) {
    deps += [
      "greaselion",
      "//brave/components/greaselion/browser",
    ]
  }

  if (enable_brave_sync) {
    deps += [ "//brave/components/brave_sync" ]
  }

  if (!is_android) {
    sources += [
    ]

    deps += [
      "importer",
      "infobars",
      "//brave/app:brave_generated_resources_grit",
    ]
  } else {
    deps += [ "android:android_browser_process" ]
  }

  if (ipfs_enabled) {
    sources += [
      "ipfs/content_browser_client_helper.cc",
      "ipfs/content_browser_client_helper.h",
      "ipfs/ipfs_service_factory.cc",
      "ipfs/ipfs_service_factory.h",
      "ipfs/ipfs_tab_helper.cc",
      "ipfs/ipfs_tab_helper.h",
    ]

    deps += [
      "//brave/browser/infobars",
      "//brave/components/ipfs",
      "//brave/components/services/ipfs/public/mojom",
      "//components/user_prefs",
      "//extensions/browser",
      "//extensions/common",
    ]
  }

  if (enable_tor) {
    deps += [
      "//brave/browser/tor",
      "//brave/components/tor",
    ]
  }

  if (enable_extensions) {
    deps += [
      "extensions",
      "//extensions/common:common_constants",
    ]
  }

  if (enable_brave_webtorrent) {
    deps += [ "//brave/components/brave_webtorrent/browser" ]
  }

  if (enable_brave_wayback_machine) {
    deps += [ "//brave/components/brave_wayback_machine" ]
  }

  if (enable_widevine) {
    sources += [
      "brave_drm_tab_helper.cc",
      "brave_drm_tab_helper.h",
    ]
    deps += [ "//brave/browser/widevine" ]
  }

  if (enable_brave_perf_predictor) {
    deps += [ "//brave/components/brave_perf_predictor/browser" ]
  }

  if (enable_speedreader) {
    sources += [
      "//brave/browser/speedreader/speedreader_service_factory.cc",
      "//brave/browser/speedreader/speedreader_service_factory.h",
      "//brave/browser/speedreader/speedreader_tab_helper.cc",
      "//brave/browser/speedreader/speedreader_tab_helper.h",
    ]
    deps += [ "//brave/components/speedreader" ]
  }

  if (is_win && is_official_build) {
    sources += [
      "//chrome/browser/google/google_update_win.cc",
      "//chrome/browser/google/google_update_win.h",
      "//chrome/browser/google/switches.cc",
      "//chrome/browser/google/switches.h",
    ]

    deps += [ "//google_update" ]
  }
}

buildflag_header("sparkle_buildflags") {
  header = "sparkle_buildflags.h"
  flags = [ "ENABLE_SPARKLE=$enable_sparkle" ]
}

source_set("version_info") {
  # these are only for version_info.cc and should not be exposed as public configs
  configs += [ "//brave/build:version" ]
  defines = [ "BRAVE_BROWSER_VERSION=\"$brave_version\"" ]

  sources = [
    "version_info.cc",
    "version_info.h",
  ]
}

source_set("browser") {
  visibility = [
    "//brave:browser_dependencies",
    "//brave/browser/*",
    "//brave/test:*",
    "//chrome/browser/*",
  ]

  deps = [ "//chrome/browser" ]
  if (enable_sparkle) {
    deps += [ "//brave/vendor/sparkle:sparkle_framework_bundle_data" ]
  }
}
